--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,21 +3,21 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
-#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel
+#b_exp: false
+b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 state_estimator:
     n_data_com_vel: [200, 200, 200]
-    #n_data_com_vel: [100, 100, 100]
     #n_data_com_vel: [20, 20, 20]
+    #n_data_com_vel: [100, 100, 100]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
 
 wbc:
     regularization:
         lambda_q_ddot: 1e-7
-        #lambda_rf: 1e-6
-        lambda_rf: 1e-8
+        lambda_rf: 1e-6
+        #lambda_rf: 1e-7
 
     contact:
         rf_z_max: 1000.0
@@ -38,18 +38,21 @@ wbc:
             ## Good until balancing
             #exp_kp: [15, 30, 20]
             #exp_kd: [4.0, 3.0, 1.5]
-            ## Seeking for walking
-            exp_kp: [15, 33, 25]
-            exp_kd: [4.0, 3.3, 1.5]
+            #TESTING
+            exp_kp: [12, 25, 20]
+            exp_kd: [3.0, 2.0, 1.5]
         icp:
             weight: [20, 20, 20]
             sim_kp: [10, 10, 100]
             sim_kd: [0, 0, 5] # x, y will be ignored
             sim_ki: [0, 0, 0]
-            exp_kp: [1.4, 1.4, 20]
+            #exp_kp: [1.2, 1.2, 20]
+            #exp_kd: [0., 0., 1.5]
+            #exp_ki: [0.4, 0.4, 0.]
+            exp_kp: [0.6, 0.6, 20]
             exp_kd: [0., 0., 1.5]
-            exp_ki: [0.4, 0.4, 0.]
-            time_constant: 3.
+            exp_ki: [1.0, 1.0, 0.]
+            time_constant: 5.
         cam:
             weight: [0., 0., 0.]
             sim_kp: [0., 0., 0.] # will be ignored
@@ -58,7 +61,7 @@ wbc:
             exp_kd: [15., 15., 15.]
 
         torso_ori:
-            weight: [20., 20., 20.]
+            weight: [20., 20., 2.]
             sim_kp: [100, 100, 100]
             sim_kd: [10, 10, 10]
             exp_kp: [15, 15, 10]
@@ -218,6 +221,8 @@ walking:
     nominal_backward_step: -0.1
     nominal_turn_radians: 0.3
     nominal_strafe_distance: 0.02
+
+    n_steps: 1
 
 static_walking:
     moving_duration: 5.
