--- a/Config/A1/SIMULATION.yaml
+++ b/Config/A1/SIMULATION.yaml
@@ -8,7 +8,10 @@ joint_limit_enforced: true
 release_time: .0 # hold in initial phase for 10 seconds
 
 control_configuration:
-  kp: [100 , 100 , 120 , 100 , 100 , 120 , 100 , 100 , 120 , 100 , 100 , 120]
-  kd: [30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30 , 30 , 30]
+  kp: [130 , 110 , 140 , 130 , 110 , 140 , 130 , 110 , 140 , 130 , 110 , 140]
+  kd: [7.5  , 4.5  , 4.5  , 7.5  , 4.5  , 4.5  , 7.5  , 4.5  , 4.5  , 7.5 , 4.5 , 4.5]
+  # kd: [30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30 , 30 , 30]
   # kp: [5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5]
   # kd: [0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2]
+
+  # self.kd = np.array([0.5, 0.3, 0.3, 0.5, 0.3, 0.3, 0.5, 0.3, 0.3, 0.5, 0.3, 0.3])*15
