--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,13 +3,13 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 state_estimator:
-    n_data_com_vel: [200, 200, 200]
-    #n_data_com_vel: [20, 20, 20]
-    #n_data_com_vel: [100, 100, 100]
+#    n_data_com_vel: [200, 200, 200]
+#    n_data_com_vel: [20, 20, 20]
+    n_data_com_vel: [100, 100, 100]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
 
