gripper gui added

--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -228,11 +228,11 @@ static_walking:
     moving_duration: 5.
     #com_height: 0.68
     com_height: 0.92
-    com_offset: [0., 0.04]
+    com_offset: [0., 0.]
 
     swing_duration: 5.
     des_foot_x_inc_local: 0.
-    des_foot_y_inc_local: 0.05
+    des_foot_y_inc_local: 0.0
     des_foot_ori_inc_local: 0. ## degrees
 
 controller:
