--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,12 +3,12 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 state_estimator:
-    n_data_com_vel: [200, 200, 200]
-    #n_data_com_vel: [20, 20, 20]
+    #n_data_com_vel: [200, 200, 200]
+    n_data_com_vel: [20, 20, 20]
     #n_data_com_vel: [100, 100, 100]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
@@ -235,8 +235,13 @@ static_walking:
     des_foot_y_inc_local: 0.0
     des_foot_ori_inc_local: 0. ## degrees
 
+static_balancing:
+    lifting_duration: 2.
+    des_foot_height: 0.05
+    landing_duration: 2.
+
 controller:
     waiting_count: 10
-    b_smoothing: true
-    #b_smoothing: false
+    #b_smoothing: true
+    b_smoothing: false
     smoothing_duration: 0.2
