--- a/config/atlas/pnc.yaml
+++ b/config/atlas/pnc.yaml
@@ -58,3 +58,5 @@ walking:
     nominal_backward_step: -0.15
     nominal_turn_radians: 0.52
     nominal_strafe_distance: 0.05
+    
+    n_steps: 2
