zmq socket for pnc-to-horizon communication added and tested

--- a/pnc/draco_pnc/CMakeLists.txt
+++ b/pnc/draco_pnc/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(pnc-draco-pnc ${DART_LIBRARIES}
                                     pnc-filters
                                     pnc-dcm-planner
                                     pnc-wbc
+                                    pnc-to-horizon
                                     )
 
 install(TARGETS pnc-draco-pnc DESTINATION "${INSTALL_LIB_DIR}")
