--- a/messages/CMakeLists.txt
+++ b/messages/CMakeLists.txt
@@ -13,11 +13,15 @@ PROTOBUF_GENERATE_PYTHON(pnc-msg-fixed-draco-py fixed_draco.proto)
 add_custom_target(pnc-msg-fixed-draco-py-target ALL DEPENDS ${pnc-msg-fixed-draco-py})
 
 PROTOBUF_GENERATE_CPP(pnc-to-horizon-src pnc-to-horizon-header pnc_to_horizon.proto)
-add_library(pnc_to_horizon ${pnc-to-horizon-src} ${pnc-to-horizon-header})
-target_include_directories(pnc_to_horizon PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+add_library(pnc-to-horizon ${pnc-to-horizon-src} ${pnc-to-horizon-header})
+target_include_directories(pnc-to-horizon PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+PROTOBUF_GENERATE_PYTHON(pnc-to-horizon-py pnc_to_horizon.proto)
+add_custom_target(pnc-to-horizon-py-target ALL DEPENDS ${pnc-to-horizon-py})
 
 install(TARGETS pnc-msg-draco DESTINATION "${INSTALL_LIB_DIR}")
 install(TARGETS pnc-msg-fixed-draco DESTINATION "${INSTALL_LIB_DIR}")
+install(TARGETS pnc-to-horizon DESTINATION "${INSTALL_LIB_DIR}")
 
 install(FILES ${PROJECT_SOURCE_DIR}/build/messages/draco.pb.h DESTINATION
     "${INSTALL_INCLUDE_DIR}/messages/")
