--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -9,7 +9,7 @@ b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_terminat
 b_joint_pos_test: false
 
 state_estimator:
-    n_data_com_vel: [200, 200, 250]
+    n_data_com_vel: [100, 100, 250]
     #n_data_com_vel: [20, 20, 20]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
@@ -53,7 +53,7 @@ wbc:
             #exp_kd: [0.06, 0.06, 1.5]
             #exp_ki: [0.0, 0.0, 0.]
             # Gains for squatting
-            exp_kp: [0.2, 0.1, 25]
+            exp_kp: [0.8, 0.8, 25]
             exp_kd: [0.04, 0.04, 1.5]
             exp_ki: [1.0, 1.0, 0.]
             time_constant: 5.
@@ -170,10 +170,10 @@ wbc:
     b_trq_limit: false
 
 balancing:
-    #swaying_amp: [0., 0.05, 0.]
-    #swaying_freq: [0., 0.2, 0.]
-    swaying_amp: [0., 0., 0.10]  # squatting behaviour
-    swaying_freq: [0., 0., 0.15]
+    swaying_amp: [0., 0.08, 0.]
+    swaying_freq: [0., 0.2, 0.]
+    #swaying_amp: [0., 0., 0.10]  # squatting behaviour
+    #swaying_freq: [0., 0., 0.15]
 
     interpolation_local_offset: [0., 0.05, 0.]
     interpolation_duration: 3.
@@ -188,24 +188,28 @@ walking:
         r_elbow_fe: -1.57
         #l_hip_aa: 0.
         #l_hip_aa: 0.047
-        l_hip_aa: 0.060
+        #l_hip_aa: 0.060
+        l_hip_aa: 0.160
         l_hip_fe: -0.785
         l_knee_fe_jp: 0.785
         l_knee_fe_jd: 0.785
         l_ankle_fe: -0.785
         #l_ankle_ie: 0.
         #l_ankle_ie: -0.047
-        l_ankle_ie: -0.060
+        #l_ankle_ie: -0.060
+        l_ankle_ie: -0.160
         #r_hip_aa: 0.
         #r_hip_aa: -0.047
-        r_hip_aa: -0.060
+        #r_hip_aa: -0.060
+        r_hip_aa: -0.160
         r_hip_fe: -0.785
         r_knee_fe_jp: 0.785
         r_knee_fe_jd: 0.785
         r_ankle_fe: -0.785
         #r_ankle_ie: 0.
         #r_ankle_ie: 0.047
-        r_ankle_ie: 0.060
+        #r_ankle_ie: 0.060
+        r_ankle_ie: 0.160
         neck_pitch: 0.
         r_hip_ie: 0.
         l_hip_ie: 0.
@@ -227,6 +231,7 @@ walking:
 
     #com_height: 0.68
     #com_height: 0.92
+    #com_height: 0.90
     com_height: 0.90
     #com_height: 0.85
     #com_height: 1.
