--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -17,6 +17,18 @@ state_estimator:
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
     n_data_base_accel: [100, 100, 100]
+    sigma_base_vel: [0.0, 0.0, 0.0]
+    sigma_base_acc: [0.5, 0.5, 0.5]
+    sigma_pos_lfoot: [0.001, 0.001, 0.001]
+    sigma_pos_rfoot: [0.001, 0.001, 0.001]
+    sigma_vel_lfoot: [0.005, 0.005, 0.002]
+    sigma_vel_rfoot: [0.005, 0.005, 0.002]
+#    sigma_base_vel: [0.005, 0.005, 0.0005]
+#    sigma_base_acc: [0.01, 0.02, 0.01]
+#    sigma_pos_lfoot: [0.0001, 0.0001, 0.00005]
+#    sigma_pos_rfoot: [0.0001, 0.0001, 0.00005]
+#    sigma_vel_lfoot: [0.005, 0.005, 0.002]
+#    sigma_vel_rfoot: [0.005, 0.005, 0.002]
 
 wbc:
     regularization:
