added gtest of dcm planner

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(draco_interface_test pnc-draco-pnc)
 # tests using GoogleTest
 add_executable(draco_state_estimator_test draco_kf_state_estimator_test.cpp)
 target_link_libraries(draco_state_estimator_test ${GTEST_LIBRARIES} pnc-draco-pnc)
+
+add_executable(dcm_planner_test dcm_planner_test.cpp)
+target_link_libraries(dcm_planner_test ${GTEST_LIBRARIES} pnc-draco-pnc)
